# kube-copy

./: .gitignore  Cargo.toml  readme.md  watcher.json
src/: config.rs  controller.rs  fs_watcher.rs  k8s_watcher.rs  main.rs  router.rs  syncer.rs
