[package]
name = "kube-copy"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
kube = { version = "0.99", features = ["runtime", "derive"] }
kube-runtime = "0.99"
k8s-openapi = { version = "0.24", features = ["v1_32"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
notify = "8.0.0"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
anyhow = "1.0"